[package]
name = "rship-blackmagic-videohub"
version = "0.1.3"
edition = "2024"
authors = ["max@lucid.rocks"]
description = "rship executor for controlling Blackmagic Videohub devices"
repository = "https://github.com/ignition-is-go/rship-blackmagic-videohub"
license = "MIT"
keywords = ["rship", "blackmagic", "videohub", "video", "routing"]
categories = ["multimedia::video", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/rship-blackmagic-videohub"

[dependencies]
rs-macros = "0.1.0"
rship-sdk = "0.1"
videohub = "1.0.1"
tokio = { version = "1.46", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
futures-util = "0.3"
dotenv = "0.15"
hostname = "0.4.1"

[[bin]]
name = "rship-blackmagic-videohub"
path = "src/main.rs"
